--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     </a></li>
                 <li class="header-tel list header-item-cont"><a href="+380687131111"
                         class="header-href contact list link">
-                        <div class="icon-contact"><svg class="icons icons-header link icon-smartphone" width="16"
-                                height="12">
+                        <div class="smartphone icon-contact"><svg class="icons icons-header link icon-smartphone"
+                                width="16" height="12">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-smartphone">
                                 </use>
                             </svg></div>+380687131111
@@ -272,46 +272,46 @@
         <section class="clients sections">
             <div class="containers container-clients">
                 <h2 class="title title-clients">Постоянные клиенты</h2>
-                <ul class="clients-icons">
+                <ul class="clients-group">
                     <li class="item-client list">
                         <a href="" class="client-link" width="170" height="92">
-                            <svg class="icon-client">
-                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-Client-1"></use>
+                            <svg class="icon-client" width="106" height="60">
+                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
                         <a href="" class="client-link" width="170" height="92">
-                            <svg class="icon-client">
-                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-Client-2"></use>
+                            <svg class="icon-client" width="106" height="60">
+                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
                         <a href="" class="client-link" width="170" height="92">
-                            <svg class="icon-client">
-                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-Client-3"></use>
+                            <svg class="icon-client" width="106" height="60">
+                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
                         <a href="" class="client-link" width="170" height="92">
-                            <svg class="icon-client">
-                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-Client-4"></use>
+                            <svg class="icon-client" width="106" height="60">
+                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
                         <a href="" class="client-link" width="170" height="92">
-                            <svg class="icon-client">
-                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-Client-5"></use>
+                            <svg class="icon-client" width="106" height="60">
+                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
                         <a href="" class="client-link" width="170" height="92">
-                            <svg class="icon-client">
-                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-Client-6"></use>
+                            <svg class="icon-client" width="106" height="60">
+                                <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-6"></use>
                             </svg>
                         </a>
                     </li>
@@ -320,7 +320,6 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
         <div class="containers container-footer">
             <div class="address-logo-footer"><a href="./index.html" class="logo logo-footer logoftr link"><span
@@ -375,9 +374,6 @@
         </div>
 
     </footer>
-
-
-
 </body>
 
 </html>
