--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,8 @@
                     </a></li>
                 <li class="header-tel list header-item-cont"><a href="+380687131111"
                         class="header-href contact list link">
-                        <div class="icon-contact"><svg class="icons icons-header link icon-smartphone" width="16"
-                                height="12">
+                        <div class="smartphone icon-contact"><svg class="icons icons-header link icon-smartphone"
+                                width="16" height="12">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-smartphone">
                                 </use>
                             </svg></div>+380687131111
