--- a/portfolio.html
+++ b/portfolio.html
@@ -169,9 +169,8 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
-        <div class="containers container-footer">
+        <div class="container-footer containers">
             <div class="address-logo-footer"><a href="./index.html" class="logo logo-footer logoftr link"><span
                         class="accent">Web</span>Studio
                 </a>
@@ -224,11 +223,6 @@
         </div>
 
     </footer>
-
-
-
-
-
 </body>
 
 </html>
