--- a/index.html
+++ b/index.html
@@ -269,47 +269,48 @@
                 </ul>
             </div>
         </section>
+        <!-- ouer clients-->
         <section class="clients sections">
             <div class="containers container-clients">
                 <h2 class="title title-clients">Постоянные клиенты</h2>
                 <ul class="clients-group">
                     <li class="item-client list">
-                        <a href="" class="client-link" width="170" height="92">
+                        <a href="" class="client-link link" width="170" height="92">
                             <svg class="icon-client" width="106" height="60">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
-                        <a href="" class="client-link" width="170" height="92">
+                        <a href="" class="client-link link" width="170" height="92">
                             <svg class="icon-client" width="106" height="60">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
-                        <a href="" class="client-link" width="170" height="92">
+                        <a href="" class="client-link link" width="170" height="92">
                             <svg class="icon-client" width="106" height="60">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
-                        <a href="" class="client-link" width="170" height="92">
+                        <a href="" class="client-link link" width="170" height="92">
                             <svg class="icon-client" width="106" height="60">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
-                        <a href="" class="client-link" width="170" height="92">
+                        <a href="" class="client-link link" width="170" height="92">
                             <svg class="icon-client" width="106" height="60">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item-client list">
-                        <a href="" class="client-link" width="170" height="92">
+                        <a href="" class="client-link link" width="170" height="92">
                             <svg class="icon-client" width="106" height="60">
                                 <use href="./images/sprite/symbol-defs-optimize.svg#icon-client-6"></use>
                             </svg>
@@ -321,7 +322,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="containers container-footer">
+        <div class="container-footer containers">
             <div class="address-logo-footer"><a href="./index.html" class="logo logo-footer logoftr link"><span
                         class="accent">Web</span>Studio
                 </a>
