--- a/portfolio.html
+++ b/portfolio.html
@@ -63,107 +63,116 @@
                 <!--buttons-->
                 <uL class="portf-buttons controls">
                     <li class="list portf-item-btn "><button type="button"
-                            class=" prtf-1 item-btn  btn default">Все</button></li>
+                            class=" prtf-1 item-btn btn default">Все</button></li>
                     <li class="list portf-item-btn "><button type="button"
-                            class=" prtf-2 item-btn  btn">Веб-сайты</button></li>
+                            class=" prtf-2 item-btn btn">Веб-сайты</button></li>
                     <li class="list portf-item-btn "><button type="button"
-                            class=" prtf-3 item-btn  btn">Приложения</button></li>
-                    <li class="list portf-item-btn "><button type="button" class=" prtf-4 item-btn  btn">Дизайн</button>
+                            class=" prtf-3 item-btn btn">Приложения</button></li>
+                    <li class="list portf-item-btn "><button type="button" class=" prtf-4 item-btn btn">Дизайн</button>
                     </li>
                     <li class="list portf-item-btn "><button type="button"
-                            class=" prtf-5 item-btn  btn">Маркетинг</button></li>
+                            class=" prtf-5 item-btn btn">Маркетинг</button></li>
                 </uL>
                 <!--gallery-->
                 <ul class="gallery-group-cards list link">
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-1-min.jpg"
-                                alt="Ноутбук изображающий на своем дисплее три визитки сотрудников компании"
-                                width="370" /></div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">Технокряк</h2>
-                            <p class="p-gallery ">Веб-сайт</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-1-min.jpg"
+                                    alt="Ноутбук изображающий на своем дисплее три визитки сотрудников компании"
+                                    width="370" /></div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">Технокряк</h2>
+                                <p class="p-gallery ">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-2-min.jpg"
-                                alt="Два баскетболиста в момент перед броском мяча" width="370" /></div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">Постер New Orlean vs Golden Star
-                            </h2>
-                            <p class="p-gallery">Дизайн</p>
-                        </div>
+                    <li class="card-portf list "><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-2-min.jpg"
+                                    alt="Два баскетболиста в момент перед броском мяча" width="370" /></div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">Постер New Orlean vs Golden Star
+                                </h2>
+                                <p class="p-gallery">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-3-min.jpg"
-                                alt="Логотип ресторана Seafood на фоне рыбы" width="370" /></div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery ">Ресторан Seafood
-                            </h2>
-                            <p class="p-gallery">Приложение</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-3-min.jpg"
+                                    alt="Логотип ресторана Seafood на фоне рыбы" width="370" /></div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery ">Ресторан Seafood
+                                </h2>
+                                <p class="p-gallery">Приложение</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-4-min.jpg"
-                                alt="Наушники полноразмерные крупным планом на светло сером фоне" width="370" />
-                        </div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">Проект Prime
-                            </h2>
-                            <p class="p-gallery">Маркетинг</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-4-min.jpg"
+                                    alt="Наушники полноразмерные крупным планом на светло сером фоне" width="370" />
+                            </div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">Проект Prime
+                                </h2>
+                                <p class="p-gallery">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-5-min.jpg"
-                                alt="Две  разных по расмерам картонные коробки кремового и белого цветов на светло сером фоне"
-                                width="370" />
-                        </div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">Проект Boxes
-                            </h2>
-                            <p class="p-gallery">Приложение</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-5-min.jpg"
+                                    alt="Две  разных по расмерам картонные коробки кремового и белого цветов на светло сером фоне"
+                                    width="370" />
+                            </div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">Проект Boxes
+                                </h2>
+                                <p class="p-gallery">Приложение</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-6-min.jpg"
-                                alt="Imac with tittle on dispay Inspiration has no Borders" width="370" /></div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">
-                                Inspiration has no Borders
-                            </h2>
-                            <p class="p-gallery">Веб-сайт</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-6-min.jpg"
+                                    alt="Imac with tittle on dispay Inspiration has no Borders" width="370" /></div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">
+                                    Inspiration has no Borders
+                                </h2>
+                                <p class="p-gallery">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-7-min.jpg"
-                                alt="Развернутая книга крупным планом с название страницы Limited Edition " /></div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">Издание Limited Edition
-                            </h2>
-                            <p class="p-gallery">Дизайн</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-7-min.jpg"
+                                    alt="Развернутая книга крупным планом с название страницы Limited Edition" /></div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">Издание Limited Edition
+                                </h2>
+                                <p class="p-gallery">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-8-min.jpg"
-                                alt="белая картонная бирка с надписью label Tag крупным планом с бесцветной нитью "
-                                width="370" />
-                        </div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">Проект LAB
-                            </h2>
-                            <p class="p-gallery">Маркетинг</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-8-min.jpg"
+                                    alt="белая картонная бирка с надписью label Tag крупным планом с бесцветной нитью "
+                                    width="370" />
+                            </div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">Проект LAB
+                                </h2>
+                                <p class="p-gallery">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="card-portf list ">
-                        <div class="card-thumb-p"><img src="./images/portfolio/img-9-min.jpg"
-                                alt="Ноутбук с презентацией Growing Business на дисплее и две кисти рук на клавиатуре"
-                                width="370" />
-                        </div>
-                        <div class="card-text-gal">
-                            <h2 class="gallery">
-                                Growing Business
-                            </h2>
-                            <p class="p-gallery">Приложение</p>
-                        </div>
+                    <li class="card-portf list"><a href="" class="container-card-gallery link">
+                            <div class="card-thumb-p"><img src="./images/portfolio/img-9-min.jpg"
+                                    alt="Ноутбук с презентацией Growing Business на дисплее и две кисти рук на клавиатуре"
+                                    width="370" />
+                            </div>
+                            <div class="card-text-gal">
+                                <h2 class="gallery">
+                                    Growing Business
+                                </h2>
+                                <p class="p-gallery">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
